@@ -12,6 +12,9 @@ CVS code -
   input_tab()
 	- Don't bother checking if num_matches is less than zero, as
 	  it's a size_t and hence unsigned. (DLR)
+- winio.c:
+  get_escape_seq_kbinput()
+	- Add missing comments. (DLR)
 - doc/syntax/asm.nanorc, doc/syntax/c.nanorc, doc/syntax/sh.nanorc:
 	- Copy the regex that highlights trailing whitespace from
 	  doc/syntax/java.nanorc to these files, as it's also useful in
